Remove hamburger nav, buggy on mobile

--- a/main.css
+++ b/main.css
@@ -115,29 +115,6 @@ a {
   margin-top: 10px;
 }
 
-/* .hamburger {
-  position: absolute;
-  left: 0;
-  top: 0;
-  width: 45px;
-  height: 35px;
-  padding: 10px 10px;
-  margin: 8px; 
-} */
-
-.fa-bars {
-  position: absolute;
-  color: #EE2B47;
-  left: 10px;
-  top: 10px;
-}
-
-.hamburger-stripe {
-  background-color: #EE2B47;
-  height: 3px;
-  margin-bottom: 4px;
-}
-
 .contact-link > a {
   text-decoration: none;
   color: #F6F6F6;
@@ -145,38 +122,23 @@ a {
 }
 
 .main-nav-ul {
-  visibility: visible;
-  opacity: 1;
   margin: 0;
-  padding: 0;
-  justify-content: center;
-  background-color: #34374C;
-  width: 100%;
-  height: 30%;
+  padding-left: 5px;
+  display: flex;
+  justify-content: flex-start;
   position: absolute;
-  transition: all .3s ease-in-out .1s;
-}
-
-.hidden, .long-bio {
-  opacity: 0;
-  visibility: hidden;
-
+  top: 15px;
 }
 
 .card {
   display: none;
 }
 
-.main-nav-link {
-line-height: 40px;
-margin-top: 15px;
-padding-left: 10px;
-border-bottom: 1px dotted #EE2B47;
-}
-
 .main-nav-link > a {
   padding: 10px;
-  color: #F6F6F6;
+  color: #EE2B47;
+  font-weight: lighter;
+
 }
 
 .intro-container {
